tests/ui/feature-gates/feature-gate-raw-dylib-macho.stderr
error[E0658]: link kind `raw-dylib` is unstable on Mach-O platforms
  --> $DIR/feature-gate-raw-dylib-macho.rs:4:29
   |
LL | #[link(name = "uwu", kind = "raw-dylib", modifiers = "+verbatim")]
   |                             ^^^^^^^^^^^
   |
   = help: add `#![feature(raw_dylib_macho)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
